--- a/PruebaTecnicaSW/Classes/Modules/FilmDetail/View/FilmDetailViewController.xib
+++ b/PruebaTecnicaSW/Classes/Modules/FilmDetail/View/FilmDetailViewController.xib
@@ -20,6 +20,7 @@
                 <outlet property="scrollView" destination="rIh-vY-kCf" id="Zn4-rB-IwF"/>
                 <outlet property="synopsisLabel" destination="pRb-dP-0ls" id="6E3-Tt-pJZ"/>
                 <outlet property="synopsisTitleLabel" destination="WG1-my-CeT" id="FyE-cJ-Ltd"/>
+                <outlet property="synopsisView" destination="fUd-z1-9ju" id="3MN-9a-MSa"/>
                 <outlet property="taglineLabel" destination="Bal-Sy-a9g" id="Tyu-rb-abc"/>
                 <outlet property="titleLabel" destination="u8Q-uM-omv" id="fnh-sc-iUx"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -34,7 +35,7 @@
                     <rect key="frame" x="0.0" y="44" width="375" height="768"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JCm-ek-Apf">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="793.66666666666663"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="793"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bhN-Cc-DdJ">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="254.66666666666666"/>
@@ -142,7 +143,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fUd-z1-9ju">
-                                    <rect key="frame" x="16" y="330" width="343" height="304.66666666666674"/>
+                                    <rect key="frame" x="16" y="330" width="343" height="304"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="*Synopsis" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WG1-my-CeT">
                                             <rect key="frame" x="0.0" y="0.0" width="343" height="24"/>
@@ -150,14 +151,14 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="*Tagline" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bal-Sy-a9g">
-                                            <rect key="frame" x="0.0" y="32" width="343" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="*Tagline" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bal-Sy-a9g">
+                                            <rect key="frame" x="0.0" y="32" width="343" height="20.333333333333329"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pRb-dP-0ls">
-                                            <rect key="frame" x="0.0" y="60.999999999999986" width="343" height="243.66666666666663"/>
+                                            <rect key="frame" x="0.0" y="60.3333333333333" width="343" height="243.66666666666663"/>
                                             <string key="text">*Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu nisi ut velit dictum molestie vel non tortor. Aenean id nunc a leo tincidunt rhoncus. Donec condimentum dignissim nibh quis porttitor. Morbi at est pretium, feugiat tellus faucibus, commodo enim. Donec quis volutpat turpis. Vivamus porttitor congue massa, vitae euismod dui bibendum non. Cras felis massa, iaculis volutpat mauris eget, porttitor eleifend est. Integer et felis velit. Phasellus cursus consectetur semper.</string>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -179,7 +180,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oDA-C5-F7B">
-                                    <rect key="frame" x="0.0" y="662.66666666666663" width="375" height="131"/>
+                                    <rect key="frame" x="0.0" y="662" width="375" height="131"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TMDBLogo" translatesAutoresizingMaskIntoConstraints="NO" id="1TJ-1x-Izk">
                                             <rect key="frame" x="0.0" y="28" width="375" height="50"/>
